cabal-version:      2.4
name:               lambda
version:            0.1.0.0
author:             UnaryPlus
maintainer:         ombspring@gmail.com

license:            MIT
-- license-file:       LICENSE
-- extra-source-files: README.md

executable lambda
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:    Lambda, CoC, SystemF

    build-depends:    base ^>=4.14.1.0,
                      parsec,
                      text,
                      containers,
                      mtl

    default-language: Haskell2010
    ghc-options:      -Wall
